<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/x240"
        android:layout_height="@dimen/y100"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x23"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/x30"
        android:layout_marginEnd="@dimen/x30"
        android:text="@string/name_product_video"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/x32"/>

    <RelativeLayout
        android:id="@+id/videoArea"
        android:layout_width="@dimen/x1152"
        android:layout_height="@dimen/y648"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x23"
        android:layout_marginTop="@dimen/y94">

        <ImageView
            android:id="@+id/framePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/video_preview_area"
            android:visibility="visible" />

        <VideoView
            android:id="@+id/sectionReview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone" />

        <smart.photoutil.View.CropLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </smart.photoutil.View.CropLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/snapshot1"
        android:layout_width="@dimen/x288"
        android:layout_height="@dimen/y162"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/x23"
        android:layout_marginTop="@dimen/y788"
        android:scaleType="centerCrop"
        android:src="@drawable/snapshot_bg" />


    <ImageView
        android:id="@+id/snapshot2"
        android:layout_width="@dimen/x288"
        android:layout_height="@dimen/y162"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/x311"
        android:layout_marginTop="@dimen/y788"
        android:scaleType="centerCrop"
        android:src="@drawable/snapshot_bg" />



    <ImageView
        android:id="@+id/snapshot3"
        android:layout_width="@dimen/x288"
        android:layout_height="@dimen/y162"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/x599"
        android:layout_marginTop="@dimen/y788"
        android:scaleType="centerCrop"
        android:src="@drawable/snapshot_bg" />

    <ImageView
        android:id="@+id/snapshot4"
        android:layout_width="@dimen/x288"
        android:layout_height="@dimen/y162"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/x887"
        android:layout_marginTop="@dimen/y788"
        android:scaleType="centerCrop"
        android:src="@drawable/snapshot_bg" />


    <Button
        android:id="@+id/load"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y94"
        android:text="@string/video_load"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/review"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y194"
        android:text="@string/video_review"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y294"
        android:text="@string/video_confirm"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/undo"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y394"
        android:text="@string/video_undo"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/save"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y494"
        android:text="@string/video_save"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/review_bat"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y594"
        android:text="@string/video_review_bat"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <Button
        android:id="@+id/shot_move"
        android:layout_width="@dimen/x598"
        android:layout_height="@dimen/y85"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/x1299"
        android:layout_marginTop="@dimen/y694"
        android:text="@string/video_shot_move"
        android:textSize="@dimen/x36"
        android:textColor="@color/colorTitle" />

    <TextView
        android:id="@+id/demo_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/snapshot1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/y17"
        android:layout_marginEnd="@dimen/x22"
        android:text="@string/support_tel"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/x26"/>

    <ImageButton
        android:id="@+id/btnCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/snapshot4"
        android:layout_toStartOf="@+id/demo_tel"
        app:srcCompat="@drawable/cut" />

</RelativeLayout>